--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,10 +2,10 @@ FROM denoland/deno:alpine-2.0.2
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json deno.json ./
 
 RUN DENO_FUTURE=1 deno install --allow-scripts
 
 COPY . .
 
-CMD [ "task", "dev", "--host" ]
+CMD [ "deno", "task", "dev" ]
