--- a/compose.yaml
+++ b/compose.yaml
@@ -33,6 +33,8 @@ services:
     restart: unless-stopped
     env_file:
       - project.env
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     command: >
       postgres
       -c shared_preload_libraries=auto_explain,pg_stat_statements
@@ -84,3 +86,11 @@ services:
       - "8000:8000"  
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"  
+  
+  lgtm:
+    image: grafana/otel-lgtm:0.8.6
+    ports:
+      - "3000:3000"
+      - "4318:4318"
+    volumes:
+      - ./lgtm-data:/data
